methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:7: error: expected class or object definition
def faireMotif() {
^PictureMono2:16: error: expected class or object definition
def marque(){
^PictureMono2:21: error: expected class or object definition
def faireV(){
^PictureMono2:41: error: Unmatched closing brace '}' ignored here
}
^